--- a/app/templates/app/producto.html
+++ b/app/templates/app/producto.html
@@ -15,6 +15,7 @@
           <h4 >{{producto.nombre}}</h4>
           <p>{{producto.descripcion}} <br>{{producto.precio}}</p><br>
           <a href="#" class="btn btn-danger" style="left: 40px;">Añadir al Carrito</a>
+          <a href="#" class="btn btn-danger" style="left: 40px;">Añadir al Carrito</a>
         </a>
       </article>
     </div>
