--- a/app/templates/app/delivery.html
+++ b/app/templates/app/delivery.html
@@ -9,10 +9,9 @@
     <br>
     <h2 style="text-align: center;">Metodos de Entrega</h2>
     <br><br>
-    <a href="{% url 'fiado' %}"><p style="text-align: center;"><img src="{% static 'app/img/deliveryyuyos.jpg' %}" alt="" height="100" width="100"></p></a>
+    <a href="{% url 'fiado' %}"><h4 style="text-align: center;">Despacho Domicilio</h1></a>
     <p style="text-align: center;">--------------------------------------------</p>
-    <p style="text-align: center; font-size: x-large;">Retiro Local</p>
-    <a href="{% url 'mediosdepago' %}"><p style="text-align: center;"><button type="submit" class="btn btn-primary mb-2">Pagar</button></p></a>
+    <a href="{% url 'mediosdepago' %}"><h4 style="text-align: center;">Retiro Local</h1></a>
     <br>
   </div>
 {% endblock contenido %}
