--- a/app/templates/app/carritodecompras.html
+++ b/app/templates/app/carritodecompras.html
@@ -3,10 +3,9 @@
 {% load static %}
 {% block css %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 {% endblock %}
 {% block contenido %}
 
@@ -17,11 +16,12 @@
   <table class="table" id="tablahorario">
     <thead class="thead-dark">
       <tr>
-        <th scope="row" colspan="3" class="text-center">CARRITO</th>
+        <th scope="row" colspan="4" class="text-center" style="font-size: xx-large;">TU CARRITO</th>
       </tr>
       <tr>
         <th>Nombre</th>
-        <th>Acumulado</th>
+        <th>Cantidad</th>
+        <th>Sumar/Restar</th>
         <th>Precio</th>
       </tr>
     </thead>
@@ -30,36 +30,32 @@
       {% for key, value in request.session.carrito.items %}
       <tr>
         <td>{{value.nombre}}</td>
-        <td>{{value.cantidad}}
-          <a href="{% url 'Add' value.producto_id %}" ><button type="button" class="btn btn-light">+</button></a>
-          <a href="{% url 'Res' value.producto_id %}" ><button type="button" class="btn btn-light">-</button></a>
-          
-          
+        <td>{{value.cantidad}}</td>
+        <td>
+          <a href="{% url 'Add' value.producto_id %}"><button type="button" >+</button></a>
+          <a href="{% url 'Res' value.producto_id %}"><button type="button" >-</button></a>
         </td>
         <td>$ {{value.acumulado}}</td>
-        
-
-        
       </tr>
       {% endfor %}
       {% else %}
       <tr>
-        <td colspan="3">
+        <td colspan="4">
           <div class="alert alert-danger text-center"> Sin Productos </div>
         </td>
       </tr>
       {% endif %}
       <tr>
         <th scope="row">Total: </th>
-        <td colspan="2"> $ {{total_carrito}}</td>
+        <td colspan="3"> $ {{total_carrito}}</td>
       </tr>
     </tbody>
   </table>
   <hr>
 </div>
 <div class="row text-center">
-  <div class="col-6"><a href="{% url 'Era' %}" class="btn btn-danger">Limpiar</a></div>
-  <div class="col-6"><a href="{% url 'delivery' %}" class="btn btn-success">Pagar</a></div>
+  <div class="col-6"><a href="{% url 'Era' %}" class="btn btn-danger">Vaciar Carrito</a></div>
+  <div class="col-6"><a href="{% url 'delivery' %}" class="btn btn-success">Ir A Pagar</a></div>
 </div>
 {% endblock contenido %}
 {% block js %}
