--- a/app/templates/app/carritodecompras.html
+++ b/app/templates/app/carritodecompras.html
@@ -21,7 +21,7 @@
       <tr>
         <th>Nombre</th>
         <th>Cantidad</th>
-        <th>Sumar/Restar</th>
+        <th>Añadir/Quitar</th>
         <th>Precio</th>
       </tr>
     </thead>
