--- a/app/templates/app/producto.html
+++ b/app/templates/app/producto.html
@@ -10,12 +10,13 @@
     <article> 
       <a>
         {% if producto.img_producto %}
-            <img src="producto:img_producto/png;base64,{{producto.img_producto}}" width="100px" height="100px" alt="">
+            <img src="data:img_producto/png;base64, {{p.img_producto}}" width="100px" height="100px" alt="">
         {% endif%}
           <h4 >{{producto.nombre}}</h4>
-          <p>{{producto.descripcion}} <br>{{producto.precio}}</p><br>
-          <a href="#" class="btn btn-danger" style="left: 40px;">Añadir al Carrito</a>
+          <p>{{producto.descripcion}} <br>$ {{producto.precio}}</p><br>
+        <a href="{% url 'Add' producto.id_producto %}" class="btn btn-danger">Añadir al Carrito</a>  
         </a>
+        
       </article>
     </div>
   </div>
