--- a/app/templates/app/vista_prod.html
+++ b/app/templates/app/vista_prod.html
@@ -13,10 +13,10 @@
   <article> 
       <a href="/visualizar_prod/{{reg.id_producto}}/">
         {% if reg.img_producto %}
-            <img src="data:img_producto/png;base64,{{reg.img_producto}}" width="100px" height="100px" alt="">
+            <img src="reg:img_producto/png;base64,{{reg.img_producto}}" width="100px" height="100px" alt="">
         {% endif%}
           <h4 >{{reg.nombre}}</h4>
-          <p>{{reg.descripcion}} <br>{{reg.precio}}</p><br>
+          <p>{{reg.descripcion}} <br>$ {{reg.precio}}</p><br>
         </a>
         <a href="{% url 'Add' reg.id_producto %}" class="btn btn-danger" style="left: 40px;">Añadir al Carrito</a>
   </article>
