--- a/app/static/app/css/estilo.css
+++ b/app/static/app/css/estilo.css
@@ -1,23 +1,22 @@
-@import url(banner.css);
-@import url(blog.css);
 @import url(menu.css);
 
+* {
+    margin: 0;
+}
 main{
-    background-color: #DD4A48;  
+    background-color:rgb(216, 214, 214);
 }
 header {
     width: 100%;
-    height: 70px;
+    height: 85px;
     background: #DD4A48;
     color: rgb(240, 240, 243);
     top: 0;
     left: 0;
     z-index: 100;
     position: fixed;/* posicion fija*/
-    font-size: large;
-}
-h1 {
-    float: left;
+    margin-bottom: 15px;
+    font-size: 16px;
 }
 
 .contenedor{
@@ -32,8 +31,6 @@ footer {
     background-color: #DD4A48;
 }
 footer .contenedor{
-    border-top: solid 5px #DD4A48;
     margin: 45px 0px;
     padding: 15px;
-    border-bottom: solid 5px #DD4A48;    
 }
